--- a/src/style.scss
+++ b/src/style.scss
@@ -14,63 +14,139 @@ body {
   background: #000;
   padding: 0;
   margin: 0;
+  font-family: 'DM sans', serif;
+
 }
 
-.content {
-  display: flex;
-  justify-content: center;
+
+
+.nav-overlay {
+  position: fixed;
+  top: 0;
+  z-index: 1;
   width: 100%;
+  height: 90px;
+
+  .nav-line {
+    width: 0%;
+    height: 1px;
+    background-color: #faa907;
+    opacity: 0.36;
+  }
+
+  .grid {
+    height: 100%;
+  }
+
+  .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    grid-column: 1/2;
+    background-color: #faa907;
+  }
+
+  .purchase,
+  .contact {
+    grid-column: 4/5;
+    background-color: #365453;
+    color: #faa907;
+    font-size: 24px;
+    font-weight: 100;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    svg {
+      margin-bottom: -2px;
+      margin-left: 8px;
+    }
+  }
+
+  .contact {
+    background-color: transparent;
+    grid-column: 3/4;
+    justify-content: flex-end;
+    padding-right: 40px;
+  }
+}
+
+.bottle-content {
+  width: 100%;
+  position: fixed;
+  top: 0
 }
 
 .bottle {
-  position: fixed;
+  position: relative;
   z-index: 0;
   top: 0;
   height: 100vh;
   width: 100%;
-  //transform: translateY(-100px);
   opacity: 0;
-
-
-  &:before,
-  &:after {
-    content: "";
-    top: 0;
-    left: 0px;
-    width: 150px;
-    height: 100%;
-    position: absolute;
-    display: block;
-    z-index: 1;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
-  }
-
-  &:after {
-    left: auto;
-    right: 0px;
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
-  }
-
-
+  grid-column: 2/3;
 }
 
-.text {
-  font-family: "ivypresto-display", serif;
-  opacity: 0;
-  color: #e89f02;
-  font-size: 6rem;
-  margin: 0;
+.grid {
+  display: grid;
+  width: 100%;
+  grid-template-columns: minmax(20px, 200px) 4fr 6fr minmax(20px, 2fr);
+}
+
+.vertical-lines {
   height: 100vh;
-  width: 100vw;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: 2;
-  transform: translateY(100px);
+
+  .line {
+    height: 0%;
+    width: 1px;
+    background-color: #faa907;
+    opacity: 36%;
+    grid-column: 2/2;
+
+    &:nth-child(2) {
+      grid-column: 3/3;
+    }
+
+    &:nth-child(3) {
+      grid-column: 4/4;
+    }
+  }
 }
+
+.main-content {
+  position: relative;
+  margin-top: 20vh;
+
+  .title {
+    font-family: "ivypresto-display", serif;
+    opacity: 0;
+    font-size: 78px;
+    max-width: 520px;
+    color: #e89f02;
+    grid-column: 3/5;
+    margin-bottom: 0.5em;
+    line-height: 1.2;
+  }
+
+  p {
+    grid-column: 3/5;
+    font-size: 1.5rem;
+    color: #e89f02;
+    max-width: 600px;
+  }
+
+}
+
+
 
 canvas {
   position: absolute;
@@ -80,26 +156,34 @@ canvas {
   left: 50%;
   transform: translate(-53%, -50%);
 
-  &:after {
-    content: "";
-    display: block;
-    top: 0;
-    left: 0;
-    width: 30px;
-    background-color: blue;
-    position: relative;
-  }
+  // &:before,
+  // &:after {
+  //   content: "";
+  //   top: 0;
+  //   left: 0px;
+  //   width: 150px;
+  //   height: 100%;
+  //   position: absolute;
+  //   display: block;
+  //   z-index: 1;
+  //   background: rgb(255, 255, 255);
+  //   background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
+  // }
+
+  // &:after {
+  //   left: auto;
+  //   right: 0px;
+  //   background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
+  // }
 }
 
 @media screen and (min-width:720px) {
-  .bottle {
-    width: 1024px;
-  }
+
 
   canvas {
     height: auto;
     width: 1024px;
-    margin-top: -40px;
+    margin-top: -20px;
   }
 
 }
